feat: 메인 페이지 수정 및 로그인 페이지 작성 #9

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'FiraCode';
+    src: url('/fonts/FiraCode-Regular.ttf')
+    format('truetype');
+}
