--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,23 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'FiraCode';
-    src: url('/fonts/FiraCode-Regular.ttf')
-    format('truetype');
+  font-family: 'FiraCode';
+  src: url('/fonts/FiraCode-Regular.ttf') format('truetype');
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Noto Sans KR';
+  src: url('/fonts/NotoSansKR-Regular.ttf') format('truetype');
+  font-style: normal;
+  font-weight: 400;
+  unicode-range: U+AC00-D7AF;
+}
+
+@font-face {
+  font-family: 'DotGothic16';
+  font-weight: 400;
+  src: url('/fonts/DotGothic16-Regular.ttf') format('truetype');
+  font-style: normal;
+  unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
 }
