style : 전체 페이지 스크롤바 안보이게 변경

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,11 @@
   src: url('/fonts/DotGothic16-Regular.ttf') format('truetype');
   font-style: normal;
 }
+
+body {
+  -ms-overflow-style: none;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
