--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,23 +3,8 @@
 @tailwind utilities;
 
 @font-face {
-  font-family: 'Noto Sans KR';
-  src: url('/fonts/NotoSansKR-Regular.ttf') format('truetype');
-  font-style: normal;
-  font-weight: 400;
-  unicode-range:
-    U+AC00-D7AF,
-    U+0020,
-    U+23CE,
-    U+1100-11FF,
-    U+3030-314E,
-    U+1161- U+11A2;
-}
-
-@font-face {
-  font-family: 'DotGothic16';
-  font-weight: 400;
-  src: url('/fonts/DotGothic16-Regular.ttf') format('truetype');
+  font-family: 'Pretendard';
+  src: url('/fonts/PretendardVariable.ttf') format('truetype');
   font-style: normal;
 }
 
