fix: 하이라이트 텍스트 시작 위치 변경 및 폰트 weight 적용 #204

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @font-face {
   font-family: 'Pretendard';
   src: url('/fonts/PretendardVariable.ttf') format('truetype');
+  font-weight: normal;
   font-style: normal;
 }
 
