--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,9 +4,12 @@
 
 @font-face {
   font-family: 'Pretendard';
-  src: url('/fonts/PretendardVariable.ttf') format('truetype');
-  font-weight: normal;
+  font-weight: 45 920;
   font-style: normal;
+  font-display: swap;
+  src:
+    url('/fonts/PretendardVariable.woff2') format('woff2-variations'),
+    url('/fonts/PretendardVariable.ttf') format('truetype');
 }
 
 body {
